@@ -1,3 +1,5 @@
+* Create Move by grouped lines (number, date, party)
+
 Version 3.4.0 - 2014-10-20
 * Bug fixes (see mercurial logs for details)
 * Add different validation type on journal
